fix horizontal scrollbar appearing on gamepage

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -168,7 +168,7 @@ h1 {
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    width: 200%;
+    width: 78vw;
     gap: 20px;
 }
 
